@@ -38,8 +38,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2013-2017 Michal Špaček
-     BSD 2-Clause License
+    © 2013-2017 Michal Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.27
